added nav bar and styling to buttons

--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -1,3 +1,7 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+  <h1>Where To?</h1>
+    <button ui-sref="login" class="btn btn-default pull-right">Login</button>
+</nav>
 <div id='login' ng-controller="AuthController">
   <h1>login</h1>
   <form name="loginForm" ng-submit='login()'>
