--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -1,3 +1,9 @@
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+  <a class="navbar-brand" href="#/map">Where To?</a>
+    <button ui-sref="login" class="btn btn-default navbar-right navbar-btn ">Login</button>
+  </div>
+</nav>
 <div id='signup'>
   <h1>signup</h1>
   <form name="signupForm" ng-submit='signup()'>
@@ -13,8 +19,4 @@
   <span ng-show='signupForm.username.$error.maxlength'>Username too long!</span>
   <span ng-show='signupForm.password.$error.minlength'>Password too short!</span>
   <span ng-show='signupForm.password.$error.maxlength'>Password too long!</span>
-</div>
-
-<div class='alert'>
-  
 </div>
