more login and signup styling

--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -11,12 +11,12 @@
     <input type="password" ng-model='user.password' name='password' ng-minlength='7' ng-maxlength='15' class="form-control">
     <button class="btn btn-lg btn-primary btn-block">signup</button>
   </form>
-  <a href="#/signin" class='text-center'>Already have an account? <strong>Signin</strong> ...</a>
+  <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
 
-<div class='alert' class='text-center'>
+<!-- <div class='alert' class='text-center'>
   <span ng-show='signupForm.username.$error.minlength'>Username too short!</span>
   <span ng-show='signupForm.username.$error.maxlength'>Username too long!</span>
   <span ng-show='signupForm.password.$error.minlength'>Password too short!</span>
   <span ng-show='signupForm.password.$error.maxlength'>Password too long!</span>
-</div>
+</div> -->
