--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -11,5 +11,5 @@
         <input type="password" ng-model='user.password' class="form-control">
         <button class="btn btn-lg btn-primary btn-block">login</button>
     </form>
-    <a sref="signup" class="text-center">Don't have an account? <strong>Signup</strong> ...</a>
+    <a sref="signup">Don't have an account? <strong>Signup</strong> ...</a>
 </div>
