--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -7,7 +7,7 @@
 <div id='login' class='text-center' ng-controller="AuthController">
     <h1>login</h1>
     <form name="loginForm" class="form-signin" ng-submit='login()'>
-        <input type='text' ng-model='user.username' class="form-control">
+        <input type='text' ng-model='user.email' class="form-control">
         <input type="password" ng-model='user.password' class="form-control">
         <button class="btn btn-lg btn-primary btn-block">login</button>
     </form>
