--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -7,8 +7,8 @@
 <div id='signup' class='text-center'>
   <h1>signup</h1>
   <form name="signupForm" class="form-signin"ng-submit='signup()'>
-    <input type='text' ng-model='user.email' ng-minlength='3' ng-maxlength='15' class="form-control">
-    <input type="password" ng-model='user.password' ng-minlength='7' ng-maxlength='15' class="form-control">
+    <input type='text' ng-model='user.email' class="form-control">
+    <input type="password" ng-model='user.password' class="form-control">
     <button class="btn btn-lg btn-primary btn-block">signup</button>
   </form>
   <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
