--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -5,13 +5,12 @@
   </div>
 </nav>
 <div id='signup' class='text-center'>
-  <h1>signup</h1>
+  <h1>create a new account</h1>
   <form name="signupForm" class="form-signin"ng-submit='signup()'>
     <input type='text' ng-model='user.email' class="form-control" placeholder="wanderlust@whereto.com">
     <input type="password" ng-model='user.password' class="form-control" placeholder="password">
     <button class="btn btn-lg btn-primary btn-block">signup</button>
   </form>
-  <a href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
 </div>
 
 <!-- <div class='alert' class='text-center'>
