--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -3,6 +3,9 @@
   width: 900px;
   margin: 0 auto;
 }
+nav {
+  background-color: teal;
+}
 
 nav button {
   display: inline;
@@ -21,4 +24,13 @@ body {
   height: 300px;
   margin: 0 auto;
   margin-top: 100px;
+}
+
+.navbar-brand {
+  font-size: 2.5em;
+}
+
+#mapdisplay {
+  margin-top: 60px;
+  border: 2px solid teal;
 }
