removed server side code and added map image

--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -4,6 +4,7 @@
     <button ui-sref="login" class="btn btn-default navbar-right navbar-btn ">Login</button>
   </div>
 </nav>
+<img src="./assets/worldmap.png" alt="">
 <div id='signup' class='text-center'>
   <h1>create a new account</h1>
   <form name="signupForm" class="form-signin"ng-submit='signup()'>
