--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -22,8 +22,9 @@ body {
   border-radius: 10px;
   width: 500px;
   height: 300px;
-  margin: 0 auto;
+  margin-right: 80px;
   margin-top: 100px;
+  float: right;
 }
 
 .navbar-brand {
@@ -33,4 +34,11 @@ body {
 #mapdisplay {
   margin-top: 60px;
   border: 2px solid teal;
+}
+
+img {
+  float: left;
+  margin-top: 150px;
+  margin-left: 80px;
+  width: 500px;
 }
