added new marker image

--- a/client/app/views/map.html
+++ b/client/app/views/map.html
@@ -12,7 +12,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="add a destination" ng-model="map.location">
                 <span class="input-group-btn">
-          <button class="btn btn-default" type="button">Mark the Map!</button>
+          <button ng-click="findLoc()" class="btn btn-default" type="button">Mark the Map!</button>
         </span>
             </div>
         </form>
