--- a/client/app/views/map.html
+++ b/client/app/views/map.html
@@ -10,9 +10,9 @@
     <div class="col-md-4 col-md-offset-4">
         <form name="locationForm" ng-submit="findLoc()">
             <div class="input-group">
-                <input type="text" class="form-control" placeholder="add a destination" ng-model="map.location">
+                <input type="text" class="form-control input-lg" placeholder="add a destination" ng-model="map.location">
                 <span class="input-group-btn">
-          <button ng-click="findLoc()" class="btn btn-default" type="button">Mark the Map!</button>
+          <button ng-click="findLoc()" class="btn-lg btn btn-default" type="button">Mark the Map!</button>
         </span>
             </div>
         </form>
