Refactor code and fix authentication bug

--- a/client/app/views/login.html
+++ b/client/app/views/login.html
@@ -4,8 +4,9 @@
         <button ui-sref="signup" class="btn btn-default navbar-right navbar-btn ">Sign Up</button>
     </div>
 </nav>
+
 <img src="./assets/worldmap.png" alt="">
-<div id='login' class='text-center' ng-controller="AuthController">
+<div id='login' class='text-center'>
     <h1>show me the map!</h1>
     <form name="loginForm" class="form-signin" ng-submit='login()'>
         <input type='text' ng-model='user.email' class="form-control" placeholder="wanderlust@whereto.com">
