--- a/client/app/views/map.html
+++ b/client/app/views/map.html
@@ -4,7 +4,7 @@
         <button ng-click="logout()" class="btn btn-default navbar-right navbar-btn ">Logout</button>
     </div>
 </nav>
-<div ng-controller="MapController">
+<div>
     <div id="mapdisplay"></div>
     <br>
     <div class="col-md-4 col-md-offset-4">
