--- a/client/app/views/signup.html
+++ b/client/app/views/signup.html
@@ -1,17 +1,29 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-  <a class="navbar-brand" href="#/map">Where To?</a>
-    <button ui-sref="login" class="btn btn-default navbar-right navbar-btn ">Login</button>
-  </div>
+    <div class="container">
+        <a class="navbar-brand" href="#/map">Where To?</a>
+        <button ui-sref="login" class="btn btn-default navbar-right navbar-btn ">Login</button>
+    </div>
 </nav>
-
-<img src="./assets/worldmap.png" alt="">
-<div id='signup' class='text-center'>
-  <h1>create a new account</h1>
-  <form name="signupForm" class="form-signin" ng-submit='signup()'>
-    <input type='text' ng-model='user.email' class="form-control" placeholder="wanderlust@whereto.com">
-    <input type="password" ng-model='user.password' class="form-control" placeholder="password">
-    <button class="btn btn-lg btn-primary btn-block">signup</button>
-  </form>
-</div>
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="./assets/worldmap.png" alt="">
+            <br>
+            <div class="text-center desc">
+                Are you a <b class="text-primary">nomadic spirit</b> aspiring to <i>travel the world</i>?
+                <br>
+                <br>
+                <b class="text-primary">Where To</b> is a tool for you to visually keep track of places on your <b class="text-primary">travel bucket list</b>!
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div id='signup' class='text-center'>
+                <h1>create a new account</h1>
+                <form name="signupForm" class="form-signin" ng-submit='signup()'>
+                    <input type='text' ng-model='user.email' class="form-control" placeholder="wanderlust@whereto.com">
+                    <input type="password" ng-model='user.password' class="form-control" placeholder="password">
+                    <button class="btn btn-lg btn-primary btn-block">signup</button>
+                </form>
+            </div>
+        </div>
+    </div>
